--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Buiding library for snake and ladder game. Implemented with modern c++ elements including template and module. With toturial of game application based on the librahhry. 
+Buiding library for snake and ladder game. Implemented with modern c++ elements including template and module. With toturial of game application based on the library. 
