--- a/README
+++ b/README
@@ -1,1 +1,3 @@
+Design with C++
+
 Buiding library for snake and ladder game. Implemented with modern c++ elements including template and module. With toturial of game application based on the library. 
